--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,18 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(
         ${PROJECT_NAME}
         src/main.cpp
-        src/gateways/BankGateways/BankGateway.cpp
-        src/gateways/BankGateways/BankGateway.hpp
+        src/gateways/Infrastructure/BankGateways/BankGateway.cpp
+        src/gateways/Infrastructure/BankGateways/BankGateway.hpp
         src/gateways/IGateway.hpp
-        src/users/BankUser.hpp
-        src/users/WalletUser.hpp
-        src/users/UserProfile.hpp
-        src/gateways/WalletGateways/WalletGateway.cpp
-        src/gateways/WalletGateways/WalletGateway.hpp
-        src/gateways/WalletGateways/MockWalletDB.cpp
-        src/gateways/WalletGateways/MockWalletDB.hpp
-        src/gateways/BankGateways/MockBankDB.cpp
-        src/gateways/BankGateways/MockBankDB.hpp
-        src/users/IUser.hpp
-        src/users/IUser.hpp
+        src/users/domain/BankUser.hpp
+        src/users/domain/WalletUser.hpp
+        src/users/domain/UserProfile.hpp
+        src/gateways/Infrastructure/WalletGateways/WalletGateway.cpp
+        src/gateways/Infrastructure/WalletGateways/WalletGateway.hpp
+        src/gateways/Infrastructure/WalletGateways/MockWalletDB.cpp
+        src/gateways/Infrastructure/WalletGateways/MockWalletDB.hpp
+        src/gateways/Infrastructure/BankGateways/MockBankDB.cpp
+        src/gateways/Infrastructure/BankGateways/MockBankDB.hpp
+        src/users/domain/IUser.hpp
+        src/users/domain/IUser.hpp
 )
